--- a/wikitest/composer.json
+++ b/wikitest/composer.json
@@ -16,7 +16,9 @@
 		"wiki": "https://www.mediawiki.org/"
 	},
 	"require": {
-		"php": ">=5.3.2"
+		"php": ">=5.3.2",
+		"mediawiki/validator": "2.0.*",
+		"mediawiki/Maps": "3.0.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "*"
